--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <h2>Find the formulas you need, all in one place</h2>
         <p>Whether you're studying for an exam or brushing up on your knowledge, our comprehensive repository has you covered. Explore formulas across Physics, Chemistry, and Math, all carefully curated for easy access.</p>
         <section class="button-container">
-            <div class="card" onclick="window.location.href='physics.html'">
+            <div class="card" onclick="window.location.href='Physics.html'">
                 <h3>Physics</h3>
             </div>
             <div class="card" onclick="window.location.href='chemistry.html'">
