--- a/chemistry.html
+++ b/chemistry.html
@@ -123,13 +123,12 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="physics.html">Physics</a>
+        <a href="Physics.html">Physics</a>
         <a href="math.html">Mathematics</a>
     </nav>
 
     <div class="container">
-        <input type="text" id="search" placeholder="Search topics..." onkeyup="searchTopics()">
-
+        
         <div class="section">
             <h2>1. Physical Chemistry</h2>
         
