--- a/math.html
+++ b/math.html
@@ -128,11 +128,11 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="chemistry.html">Chemistry</a>
-        <a href="physics.html">Physics</a>
+        <a href="Physics.html">Physics</a>
     </nav>
 
     <div class="container">
-        <input type="text" id="search" placeholder="Search formulas..." onkeyup="searchFormulas()">
+       
 
         <div class="formula">
             <h2>1. Set, Logic, and Functions</h2>
